test_src/compiler_errors/types/binary/UnsignedRightShiftBoolError1.b
class UnsignedRightShiftBoolError1 {
    void test() {
        println(true >>> 1);
    }
}
